Add token generation and password hashing to the server

--- a/server/server/appsettings.json
+++ b/server/server/appsettings.json
@@ -5,6 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "KpBhc14puSXV3fexdA3K",
+    "Issuer": "https://localhost:7296",
+    "Audience": "https://localhost:7296"
+  },
+  "ConnectionStrings": {
+    "SQLink": "server=localhost;user=SA;password=password;database=SQLink;trusted_connection=false;TrustServerCertificate=True"
+  }
 }
-
